Fix the script command.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ python:
 
 install: "pip install -r test-projects/setup.pip -r test-projects/django1_4/setup.pip"
 
-script: cd test-projects/django1_4 && python manage.py test slumber_examples
+script: "cd test-projects/django1_4 && python manage.py test slumber_examples"
